--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@
 
 /* -----------------Colors */
 
+.bg-color-work-history {
+    background-color: #9b59b6;
+}
+
 .bg-color-name-title {
     background-color: #676767;
 }
@@ -60,6 +64,7 @@ h1, h2, h3, h4 {
     float: none;
 }
 
+.history-heading,
 .section-heading {
     font-family: 'Exo', sans-serif;
     font-weight: 300;
@@ -279,3 +284,50 @@ footer {
     margin: 40px 20px;
 }
 
+/* -----------------Work-History */
+
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item {
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position: absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: 'Exo', sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after {
+    width: 12px;
+    height: 12px;
+    display: block;
+    position: absolute;
+    top: 2.4em;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background-color: #fafafa;
+}
+
+.history-items {
+    margin-bottom: 30px;
+}
